// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecurityCard component should render properly 1`] = `
<StandardCard
  accentHeader={true}
  title={
    <span>
      <b>
        test2
      </b>
       level security - 
    </span>
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Typography)
        component="p"
        variant="body2"
      >
        test3
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <[object Object]
      disabled={false}
      fieldID="test1"
      selectedPolicyKey={1}
      text={
        Object {
          "description": "test3",
          "prompt": "test4",
        }
      }
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <[object Object]
      disabled={false}
      fieldID="test1"
      selectedPolicyKey={0}
      text={
        Object {
          "description": "test3",
          "fieldLabel": undefined,
          "prompt": "test4",
          "selectedTitle": undefined,
        }
      }
    />
  </WithStyles(Grid)>
</StandardCard>
`;

exports[`SecurityCard component should render properly 2`] = `
<StandardCard
  accentHeader={true}
  title={
    <span>
      <b>
        test2
      </b>
       level security - 
    </span>
  }
>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <WithStyles(Grid)
      item={true}
      xs={12}
    >
      <WithStyles(Typography)
        component="p"
        variant="body2"
      >
        test3
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <[object Object]
      disabled={false}
      fieldID="test1"
      selectedPolicyKey={0}
      text={
        Object {
          "description": "test3",
          "prompt": "test4",
        }
      }
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    container={true}
    spacing={8}
  >
    <[object Object]
      disabled={false}
      fieldID="test1"
      selectedPolicyKey={0}
      text={
        Object {
          "description": "test3",
          "fieldLabel": undefined,
          "prompt": "test4",
          "selectedTitle": undefined,
        }
      }
    />
  </WithStyles(Grid)>
</StandardCard>
`;
